@@ -4,6 +4,7 @@ export("%all_in%")
 export("%has_names%")
 export(add_class)
 export(all_in)
+export(angular_distance)
 export(apply_minmax_scale)
 export(apply_quantile_scale)
 export(apply_uniform_scale)
